[package]
name = "maliciousfileutil"
version = "0.2.7"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.141" }
serde_json = { version = "1.0.82" }
zip = { version = "0.6.2" }
futures = { version = "0.3.21" }
rpassword = { version = "7.0" }
aes-gcm-siv = { version = "0.11.1" }
indicatif = { version = "0.17.1" }
console = { version = "0.15.1" }
nipper = { version = "0.1.9" }